--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,20 +8,28 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
-body,html {
+
+body,
+html {
     overflow-x: hidden;
     scroll-behavior: smooth;
 }
+
 img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     display: flex;
 }
-a,a:hover {
+
+a,
+a:hover {
     text-decoration: none;
 }
-ul.ol.li {
+
+ul,
+ol,
+li {
     list-style: none;
 }
 
@@ -31,7 +39,229 @@ ul.ol.li {
     margin-inline: auto;
     width: 83%;
 }
-
+.btn-primary {
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    text-transform: capitalize;
+    background-color: #E02C6D;
+    padding: 10px 24px;
+    color: #FFF;
+    font-size: 1rem;
+    font-weight: 700;
+    border: none;
+    border-radius: 40px;
+    cursor: pointer;
+    transition: all linear 0.3s;
+    &:hover {
+        background: transparent;
+        color: #E02C6D;
+        border: 2px solid #E02C6D;
+    }
+}
+h1 {
+    color: #3A3A3A;
+    font-size: 3.25rem;
+    font-weight: 700;
+    line-height: 130%;
+}
+p {
+    color: #3A3A3A;
+    font-size: 1rem;
+    font-weight: 600;
+}
 /* Navbar section styles start from here */
-
+nav {
+    padding: 30px 0;
+}
+nav .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.logo a {
+    color: #3A3A3A;
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+nav .nav-links {
+    display: flex;
+    gap: 34px;
+}
+nav .nav-links ul {
+    display: flex;
+    gap: 34px;
+}
+nav .nav-links ul li a {
+    color: #3A3A3A;
+    font-size: 1rem;
+    font-weight: 600;
+}
+nav .nav-icons {
+    display: flex;
+    gap: 34px;
+}
+nav .nav-icons img {
+    width: 24px;
+}
 /* Navbar section styles end here */
+
+/* Banner section styles start from here */
+.banner {
+    padding: 60px 0;
+}
+.banner-con-main {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.banner-text {
+    width: 50%;
+}
+.banner-text p {
+    margin: 16px 0;
+}
+.banner-img {
+    background: url(../images/Circle\ design.svg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+/* Banner section styles end here */
+
+/* Sponsers section style start from here */
+.sponser {
+    padding: 100px 0;
+}
+.sponser .logos{
+    /* background-color: blue; */
+    display: flex;
+    gap: 25px;
+    padding: 40px 0;
+    /* border: 5px solid transparent; 
+    background-image: linear-gradient(white, white), linear-gradient(to right, red, blue);
+    background-origin: border-box; 
+    background-clip: padding-box, border-box; */
+}
+.sponser .logos .item1 {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    /* background-color: black; */
+    width: 57%;
+}
+.sponser .logos .item2 {
+    display: flex;
+    justify-content: space-between;
+    gap: 15px;
+    /* background-color: red; */
+    width: 45%;
+}
+.sponser img {
+    height: 48px;
+    /* width: 130px; */
+}
+/* Sponsers section style end here */
+
+/* Product section styles start from here */
+.section-heading h3 {
+    text-align: center;
+    color: #3A3A3A;
+    font-size: 1.75rem;
+    font-weight: 600;
+    line-height: 130%;
+    margin-bottom: 30px;
+}
+
+.card-container {
+    display: grid;
+    gap: 30px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+.card {
+    padding: 18px 14px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+}
+.card .product-name {
+    color: #18191F;
+    font-size: 1.75rem;
+    font-weight: 500;
+    line-height: 40px;
+    margin: 16px 0 6px;
+    text-transform: capitalize;
+}
+.card .content > h4 {
+    color: rgba(0, 0, 0, 0.87);
+    font-size: 1.5rem;
+    font-weight: 400;
+    line-height: 150%;
+    margin-top: 6px;
+}
+.card .content .ratings {
+    display: flex;
+    gap: 8px;
+    align-items: center;
+}
+.card .content .ratings .stars i {
+    color: #FB8200;
+    font-size: 14px;
+}
+.card .content .ratings .rating-number span {
+    color: #5E6366;
+    font-size: 0.75rem;
+    font-weight: 700;
+    line-height: 22px;
+    letter-spacing: 0.1px;
+}
+.card .content p {
+    color: #5E6366;
+    font-size: 1rem;
+    font-weight: 700;
+    line-height: 22px;
+    letter-spacing: 0.1px;
+}
+#product .linking {
+    color: rgba(224, 44, 109, 0.87);
+    font-size: 1rem;
+    font-weight: 700;
+    text-transform: capitalize;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    gap: 30px;
+    margin-top: 50px;
+}
+#product .linking span {
+    margin-right: 8px;
+}
+/* Product section styles end here */
+
+/* Featured section styles start from here */
+#featured {
+    margin: 100px 0;
+}
+#featured > .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+#featured .right {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+}
+#featured .right h2 {
+    color: #0A0826;
+    font-size: 2.375rem;
+    font-weight: 700;
+    line-height: 60px;
+}
+#featured .right p {
+    margin: 15px 0;
+    width: 501px;
+}
+#featured .right button {
+    display: inline-flex;
+}
+/* Featured section styles emd here */
