--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,3 +265,34 @@ nav .nav-icons img {
     display: inline-flex;
 }
 /* Featured section styles emd here */
+
+/* Footer section styles start from here */
+footer {
+    background: #0A0826;
+    padding: 50px 0;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+footer .footer-logo {
+    color: #FFF;
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+footer .copyright {
+    color: #D9DBE1;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 24px;
+    margin: 17px 0;
+}
+.social-links ul {
+    display: flex;
+    gap: 16px;
+}
+footer .social-links ul li a img {
+    width: 32px;
+    height: 32px;
+}
+/* Footer section styles end here */
